--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Randomnumberguessinggame : Game that makes up a random number and user has to guess it correctly.">
+    <meta name="description" content="Random Number Guessing Game : Game that makes up a random number and user has to guess it correctly.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Randomnumberguessinggame</title>
+    <title>Random Number Guessing Game</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/omarenriquez/RandomNumberGuessingGame">View on GitHub</a>
 
-          <h1 id="project_title">Randomnumberguessinggame</h1>
+          <h1 id="project_title">Random Number Guessing Game</h1>
           <h2 id="project_tagline">Game that makes up a random number and user has to guess it correctly.</h2>
 
             <section id="downloads">
@@ -72,7 +72,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Randomnumberguessinggame maintained by <a href="https://github.com/omarenriquez">omarenriquez</a></p>
+        <p class="copyright">Random Number Guessing Game maintained by <a href="https://github.com/omarenriquez">omarenriquez</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
